// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Home component renders with Android platform 1`] = `
<View
  onLayout={[Function]}
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "marginTop": 5,
          "padding": 5,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "marginLeft": 25,
            "marginRight": 25,
          }
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              [
                {},
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#007AFF",
                    "fontSize": 18,
                    "margin": 8,
                    "textAlign": "center",
                  },
                ]
              }
            >
              HELP
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "marginLeft": 25,
            "marginRight": 25,
          }
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              [
                {},
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#007AFF",
                    "fontSize": 18,
                    "margin": 8,
                    "textAlign": "center",
                  },
                ]
              }
            >
              NEW GAME
            </Text>
          </View>
        </View>
      </View>
    </View>
    <Text>
      Game status: Game started. You have 10 chances left.
    </Text>
    <View
      style={
        {
          "borderRadius": 5,
          "borderWidth": 1,
          "flex": 1,
          "margin": 5,
          "minHeight": 0,
          "padding": 15,
        }
      }
    >
      <Text>
        Your guess:
      </Text>
      <RCTScrollView
        data={[]}
        getItem={[Function]}
        getItemCount={[Function]}
        keyExtractor={[Function]}
        onContentSizeChange={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        removeClippedSubviews={true}
        renderItem={[Function]}
        scrollEventThrottle={0.0001}
        stickyHeaderIndices={[]}
        style={
          {
            "display": "flex",
            "flex": 1,
            "minHeight": 0,
          }
        }
        viewabilityConfigCallbackPairs={[]}
      >
        <View />
      </RCTScrollView>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "flexDirection": "row",
          "paddingRight": 6,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "row",
            "minWidth": 0,
          }
        }
      >
        <TextInput
          autoCapitalize="none"
          editable={true}
          keyboardType="numeric"
          maxLength={1}
          onChangeText={[Function]}
          placeholder=""
          style={
            {
              "borderRadius": 5,
              "borderWidth": 2,
              "flex": 1,
              "fontSize": 20,
              "margin": 6,
              "minWidth": 0,
              "padding": 6,
              "textAlign": "center",
            }
          }
          testID="input-number-0"
          value=""
        />
        <TextInput
          autoCapitalize="none"
          editable={true}
          keyboardType="numeric"
          maxLength={1}
          onChangeText={[Function]}
          placeholder=""
          style={
            {
              "borderRadius": 5,
              "borderWidth": 2,
              "flex": 1,
              "fontSize": 20,
              "margin": 6,
              "minWidth": 0,
              "padding": 6,
              "textAlign": "center",
            }
          }
          testID="input-number-1"
          value=""
        />
        <TextInput
          autoCapitalize="none"
          editable={true}
          keyboardType="numeric"
          maxLength={1}
          onChangeText={[Function]}
          placeholder=""
          style={
            {
              "borderRadius": 5,
              "borderWidth": 2,
              "flex": 1,
              "fontSize": 20,
              "margin": 6,
              "minWidth": 0,
              "padding": 6,
              "textAlign": "center",
            }
          }
          testID="input-number-2"
          value=""
        />
        <TextInput
          autoCapitalize="none"
          editable={true}
          keyboardType="numeric"
          maxLength={1}
          onChangeText={[Function]}
          placeholder=""
          style={
            {
              "borderRadius": 5,
              "borderWidth": 2,
              "flex": 1,
              "fontSize": 20,
              "margin": 6,
              "minWidth": 0,
              "padding": 6,
              "textAlign": "center",
            }
          }
          testID="input-number-3"
          value=""
        />
      </View>
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            [
              {},
              {},
            ]
          }
        >
          <Text
            disabled={true}
            style={
              [
                {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "margin": 8,
                  "textAlign": "center",
                },
                {
                  "color": "#cdcdcd",
                },
              ]
            }
          >
            GUESS
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`The Home component renders without crashing 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "marginTop": 5,
          "padding": 5,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "marginLeft": 25,
            "marginRight": 25,
          }
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              [
                {},
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#007AFF",
                    "fontSize": 18,
                    "margin": 8,
                    "textAlign": "center",
                  },
                ]
              }
            >
              Help
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "marginLeft": 25,
            "marginRight": 25,
          }
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              [
                {},
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#007AFF",
                    "fontSize": 18,
                    "margin": 8,
                    "textAlign": "center",
                  },
                ]
              }
            >
              New Game
            </Text>
          </View>
        </View>
      </View>
    </View>
    <Text>
      Game status: Game started. You have 10 chances left.
    </Text>
    <View
      style={
        {
          "borderRadius": 5,
          "borderWidth": 1,
          "flex": 1,
          "margin": 5,
          "minHeight": 0,
          "padding": 15,
        }
      }
    >
      <Text>
        Your guess:
      </Text>
      <RCTScrollView
        data={[]}
        getItem={[Function]}
        getItemCount={[Function]}
        keyExtractor={[Function]}
        onContentSizeChange={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={0.0001}
        stickyHeaderIndices={[]}
        style={
          {
            "display": "flex",
            "flex": 1,
            "minHeight": 0,
          }
        }
        viewabilityConfigCallbackPairs={[]}
      >
        <View />
      </RCTScrollView>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "flexDirection": "row",
          "paddingRight": 6,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "row",
            "minWidth": 0,
          }
        }
      >
        <TextInput
          autoCapitalize="none"
          editable={true}
          keyboardType="numeric"
          maxLength={1}
          onChangeText={[Function]}
          placeholder=""
          style={
            {
              "borderRadius": 5,
              "borderWidth": 2,
              "flex": 1,
              "fontSize": 20,
              "margin": 6,
              "minWidth": 0,
              "padding": 6,
              "textAlign": "center",
            }
          }
          testID="input-number-0"
          value=""
        />
        <TextInput
          autoCapitalize="none"
          editable={true}
          keyboardType="numeric"
          maxLength={1}
          onChangeText={[Function]}
          placeholder=""
          style={
            {
              "borderRadius": 5,
              "borderWidth": 2,
              "flex": 1,
              "fontSize": 20,
              "margin": 6,
              "minWidth": 0,
              "padding": 6,
              "textAlign": "center",
            }
          }
          testID="input-number-1"
          value=""
        />
        <TextInput
          autoCapitalize="none"
          editable={true}
          keyboardType="numeric"
          maxLength={1}
          onChangeText={[Function]}
          placeholder=""
          style={
            {
              "borderRadius": 5,
              "borderWidth": 2,
              "flex": 1,
              "fontSize": 20,
              "margin": 6,
              "minWidth": 0,
              "padding": 6,
              "textAlign": "center",
            }
          }
          testID="input-number-2"
          value=""
        />
        <TextInput
          autoCapitalize="none"
          editable={true}
          keyboardType="numeric"
          maxLength={1}
          onChangeText={[Function]}
          placeholder=""
          style={
            {
              "borderRadius": 5,
              "borderWidth": 2,
              "flex": 1,
              "fontSize": 20,
              "margin": 6,
              "minWidth": 0,
              "padding": 6,
              "textAlign": "center",
            }
          }
          testID="input-number-3"
          value=""
        />
      </View>
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            [
              {},
              {},
            ]
          }
        >
          <Text
            disabled={true}
            style={
              [
                {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "margin": 8,
                  "textAlign": "center",
                },
                {
                  "color": "#cdcdcd",
                },
              ]
            }
          >
            Guess
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
